--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ a {
 }
 
 .hero-content h1 {
-  font-size: 2.6rem;
+  font-size: 4.6rem;
   margin: 20px;
   font-weight: 400;
   letter-spacing: 0.5rem;
@@ -545,6 +545,17 @@ a {
   .Tour-date img {
     width: 250px;
   }
+
+  .about-img img::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 0.5rem solid var(--primary-500);
+    top: -1.5rem;
+    left: -1.5rem;
+    border-radius: var(--borderRadius);
+  }
 }
 @media (max-width: 1280px) {
   .Tour-date img {
@@ -564,6 +575,9 @@ a {
 
   .footer-icons {
     justify-content: center;
+  }
+  .about-us h2 {
+    font-size: 2.6rem;
   }
 }
 
@@ -695,7 +709,15 @@ a {
     flex: 1 1 calc(100% - 0.5rem);
   }
 
+  .footer-link {
+    display: inline;
+    padding: 30px;
+  }
   .gallery-icon {
     font-size: 1.8rem;
+    text-align: center;
+  }
+  .social-icons {
+    padding: 0.5rem;
   }
 }
