--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400|Poppins&display=swap");
 html {
   font-size: 100%;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 :root {
